--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -1,12 +1,12 @@
 +-add-address-line=+ Ajouter une ligne d'adresse
 0-analytics-cloud-connection=Connexion à Analytics cloud
-1-account-was-added-to-x=1 compte a été ajouté à {1}.
+1-account-was-added-to-x=1 compte a été ajouté à {0}.
 1-entry-was-imported-correctly=1 entrée a été importée correctement.
 1-image-failed-process=1 image dont le traitement a échoué.
 1-note=1 note
-1-organization-was-added-to-x=1 organisation a été ajoutée à {1}.
+1-organization-was-added-to-x=1 organisation a été ajoutée à {0}.
 1-synced-sites=Sites synchronisés
-1-user-was-added-to-x=1 utilisateur a été ajouté à {1}.
+1-user-was-added-to-x=1 utilisateur a été ajouté à {0}.
 2-synced-contact-data=Données de contact synchronisées
 2-synced-contacts=Contacts synchronisés
 24-hour=24 heures
@@ -3636,7 +3636,7 @@ field.user-agent=Agent utilisateur
 field.user-group-ids=Groupe d'utilisateurs
 field.user-group-role-ids=Rôle de site et de organisation
 field.user-id=Utilisateur
-field.user-name=Nom
+field.user-name=Nom d'utilisateur
 fields-help=Saisissez une liste de champs à extraire et à analyser à partir du document de saisie.
 fields-to-display=Champs à afficher
 fields-to-display-help=Saisissez les noms des champs à afficher dans le résumé, en liste avec virgules de séparation. S'ils ne sont pas définis, tous les champs sont affichés. Le premier champ est toujours affiché en tant que titre. Si deux champs sont définis, le deuxième est toujours affiché en tant que contenu.
@@ -5128,7 +5128,7 @@ logout-on-session-expiration=Déconnexion après expiration de session
 logout-on-session-expiration-description=Réglez ce paramètre sur vrai pour déconnecter un utilisateur d'OpenSSO quand la session du portail expire.
 logout-on-session-expiration-help=Définir comme vrai afin de déconnecter l'utilisateur du CAS lorsque la session du portail expire.
 logout-redirect-url=URL de redirection après déconnexion
-logout-redirect-url-help=TODO
+logout-redirect-url-help=Rediriger les utilisateurs vers l'URL spécifiée après une déconnexion réussie.
 logout-url-for-opensso-help=Cette URL est utilisée pour spécifier la page de déconnexion du serveur OpenSSO. Utiliser <em>goto=</em> comme le paramètre pour spécifier où rediriger après la déconnexion.
 logs=Journaux
 longdesc=Description longue
@@ -6138,9 +6138,9 @@ object-action-trigger-help[liferay/commerce_order_status]=The order status was u
 object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
 object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
 object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
-object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
-object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
-object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=Une entrée a été ajoutée.
+object-action-trigger-help[onAfterDelete]=Une entrée a été supprimée.
+object-action-trigger-help[onAfterUpdate]=Une entrée a été mise à jour.
 object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
 object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
 object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
@@ -10505,7 +10505,7 @@ x-member={0} membre
 x-members={0} membres
 x-mentioned-you-in-a-comment-in-a-x={0} vous a mentionné dans un commentaire du {1}.
 x-mentioned-you-in-a-x={0} vous a mentionné dans un {1}.
-x-minute-read=Lecture {0} Minutes
+x-minute-read={0} minutes de lecture
 x-modified-a-x-in-x-x-ago={0} a modifié {1} dans {2} il y a {3}.
 x-modified-a-x-x-ago={0} a modifié {1} il y a {2}.
 x-module-per-row={0} module par rangée
