--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -3982,7 +3982,7 @@ removed-attachments=Pièces jointes supprimées
 removed-by=Supprimé(e)(s) par
 removed-date=Date supprimée
 removed-in=Supprimé dans
-rename=Retitrez
+rename=Renomer
 rename-group=Renommer le groupe
 rename-role=Renommer le rôle
 renamed-as-x=Renommé en tant que {0}
