--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -6139,8 +6139,8 @@ object-action-trigger-help[liferay/commerce_payment_status]=The payment status w
 object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
 object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
 object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
-object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
-object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=Uma entrada foi apagada.
+object-action-trigger-help[onAfterUpdate]=Uma entrada foi actualizada.
 object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
 object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
 object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
